fix jump

--- a/static-prototype/assets/sass/components/_events-list.sass
+++ b/static-prototype/assets/sass/components/_events-list.sass
@@ -28,7 +28,7 @@
   .events-list-title
     font-size: 1.4rem
     margin: 0
-    white-space: nowrap
+    //white-space: nowrap
     padding-right: 1rem
     @media (min-width: $break-medium)
       font-size: 2.4rem
